@@ -12,6 +12,7 @@ For details of when a commit makes it into the stable branch see the ReleaseNote
 
 2017-05-03 niel
 	Mrg: PR 2448, from kaibosh - Update tmux configs for tmux 2.4.
+	Fix: NULL for predate in IRCScraper. Closes issue
 2017-05-01 niel
 	Mrg: dev => Latest-testing to prepare for updating stable 0.x to v0.7.2.0
 
